PCS BAckup 26Dec2023/Backup-Source/objects/Phoenix_Product_History__c.object
<CustomObject>
    <description>This object is to track the history of the Product fields.</description>
    <fields>
        <fullName>Phoenix_Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phoenix_Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phoenix_Modified_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phoenix_Modified_by_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modified by User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Product_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_New_Value__c</fullName>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Previous_Value__c</fullName>
        <label>Previous Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phoenix_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Histories</relationshipLabel>
        <relationshipName>Product_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phoenix_Throughput_Cost__c</fullName>
        <formula>IF(CONTAINS( Phoenix_Field_Name__c , &quot;Throughput&quot;),Phoenix_Product__r.Phoenix_Throughput_cost__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Throughput Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Product History</label>
    <nameField>
        <label>Product History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>